[gd_scene load_steps=5 format=3 uid="uid://hic04vftrqg1"]

[ext_resource type="Script" uid="uid://bjtnqhcspryur" path="res://scripts/cutting_board_qte.gd" id="1_oc6ur"]
[ext_resource type="Texture2D" uid="uid://jm7mrqlk1yu3" path="res://assets/tauba arrumada 1.png" id="2_xcm44"]
[ext_resource type="Texture2D" uid="uid://biua8oyqiw8ip" path="res://assets/pointer.png" id="3_lx5pw"]
[ext_resource type="Texture2D" uid="uid://ej8qv10bbgbg" path="res://assets/Faca de ladinho.png" id="4_xcm44"]

[node name="CuttingBoardQTE" type="Control"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 100.0
script = ExtResource("1_oc6ur")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 100.0
texture = ExtResource("2_xcm44")

[node name="IngredientSprite" type="TextureRect" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -24.0
offset_right = 21.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="QTEBar" type="ColorRect" parent="."]
custom_minimum_size = Vector2(150, 17)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_right = 75.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.2, 0.2, 0.2, 0.5)

[node name="Hitzone1" type="ColorRect" parent="QTEBar"]
custom_minimum_size = Vector2(15, 17)
layout_mode = 0
offset_left = 24.0
offset_right = 39.0
offset_bottom = 16.0
color = Color(0.5, 0.5, 0.5, 0.9)

[node name="Hitzone2" type="ColorRect" parent="QTEBar"]
custom_minimum_size = Vector2(20, 17)
layout_mode = 0
offset_left = 64.0
offset_right = 84.0
offset_bottom = 16.0
color = Color(0.597, 0.597, 0.597, 0.9)

[node name="Hitzone3" type="ColorRect" parent="QTEBar"]
custom_minimum_size = Vector2(15, 17)
layout_mode = 0
offset_left = 120.0
offset_right = 135.0
offset_bottom = 16.0
color = Color(0.596, 0.596, 0.596, 0.9)

[node name="Pointer" type="TextureRect" parent="QTEBar"]
custom_minimum_size = Vector2(10, 16)
layout_mode = 0
offset_right = 10.0
offset_bottom = 17.0
texture = ExtResource("3_lx5pw")

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -19.0
offset_top = 18.0
offset_right = 21.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="Knife" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 94.0
texture = ExtResource("4_xcm44")
stretch_mode = 5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Knife2" type="TextureRect" parent="CanvasLayer"]
offset_right = 32.0
offset_bottom = 94.0
texture = ExtResource("4_xcm44")
stretch_mode = 5
